kubernetes/prod/app-prod-deployment-flask.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: krithikv/flask-worker-app:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "src/flask_api.py"]
          ports:
            - containerPort: 5000
