kubernetes/prod/app-prod-deployment-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: your-dockerhub-username/your-worker-image:latest
          command: ["python", "src/worker.py"]
