kubernetes/prod/app-prod-service-flask.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  selector:
    app: flask
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
